# crabstep

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: constants.rs  error.rs  lib.rs
src/deserializer/: constants.rs  consumed.rs  foundation.rs  header.rs  iter.rs  mod.rs  number.rs  read.rs  string.rs  typedstream.rs
src/deserializer/foundation/: array.rs  boolean.rs  bytes.rs  class.rs  date.rs  dict.rs  helpers.rs  mod.rs  names.rs  null.rs  number.rs  string.rs  test_support.rs  url.rs
src/models/: archivable.rs  archived.rs  class.rs  mod.rs  output_data.rs  types.rs
src/test_data/: Arabic  Currency  HugeWithRefs
src/test_data/foundation/: NSArray  NSArrayNested  NSArrayWithNull  NSAttributedString  NSData  NSDate  NSDateFractional  NSDictionary  NSDictionaryNested  NSMutableArray  NSMutableData  NSMutableDictionary  NSMutableSet  NSMutableString  NSSet  NSString  NSURL  NSURLRelative  NestedAttributed  NestedContainers  NestedData  NestedScalars  NestedStrings  NumberBool  NumberDouble  NumberFloat  NumberInt  NumberInt64
test_data/generators/: foundation.swift  generate.sh
